Change spacing between lesson meta info, fixes #67

--- a/src/gui/static/style.css
+++ b/src/gui/static/style.css
@@ -45,6 +45,10 @@ input, textarea, select { font-family:inherit; }
 
 }
 
+.content-item h3 {
+  margin: 0.5em 0;
+}
+
 a > .content-item > h3, .course-details-box > h3 {
   margin: 2px;
 }
